--- a/main.css
+++ b/main.css
@@ -28,8 +28,8 @@ body{
     text-align: center;
 }
 .logo{
-    margin-left: center;
-    margin-right: center;
+    margin-left: 43%;
+    /*margin-right: center;*/
     margin-top: 20px;
     color: #2A253B;
     font-size: 55px;
@@ -37,8 +37,8 @@ body{
 }
 
 .write{
-    margin-left: center;
-    margin-right: center;
+    margin-left: 43%;
+    /*margin-right: center;*/
     text-align: center;
     color: #FFFFFF;
     font-size: 20px;
@@ -73,7 +73,7 @@ body{
 
 .col-container {
     display: table; /* Make the container element behave like a table */
-    width: 500px; /* Set full-width to expand the whole page */
+    width: 470px; /* Set full-width to expand the whole page */
     height: 770px;
     margin-left: auto;
     margin-right: auto;
