--- a/main.css
+++ b/main.css
@@ -28,8 +28,8 @@ body{
     text-align: center;
 }
 .logo{
-    margin-left: 37%;
-    margin-right: 37%;
+    margin-left: 200px;
+/*     margin-right: 37%; */
     margin-top: 20px;
     color: #2A253B;
     font-size: 55px;
@@ -37,8 +37,8 @@ body{
 }
 
 .write{
-    margin-left: 37%;
-    margin-right: 37%;
+    margin-left: 200px;
+/*     margin-right: 37%; */
     text-align: center;
     color: #FFFFFF;
     font-size: 20px;
@@ -68,7 +68,7 @@ body{
     color: #000000;
     text-decoration: none;
     display: inline-block;
-    font-size: 24px;
+    font-size: 34px;
 }
 
 .col-container {
