--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ body{
     text-overflow: ellipsis;
 }
 .logo{
-    margin-left: 120px;
+    margin-left: 37%;
 /*     margin-right: 37%; */
     margin-top: 20px;
     color: #2A253B;
@@ -43,7 +43,7 @@ body{
     white-space: nowrap;
 /*     overflow: hidden; */
     text-overflow: ellipsis;
-    margin-left: 150px;
+    margin-left: 37%;
 /*     margin-right: 37%; */
     text-align: center;
     color: #FFFFFF;
