--- a/main.css
+++ b/main.css
@@ -10,11 +10,11 @@
 body{
     background-color: #6A959B;
     width: auto;
-    height: auto;
+    height: 800px;
 }
 
 .container {
-    max-width: auto;
+    max-width: 1300px;
     margin: 0 auto;
 }
 
@@ -26,13 +26,8 @@ body{
 
 .logo{
     text-align: center;
-    white-space: nowrap;
-/*     overflow: hidden; */
-    text-overflow: ellipsis;
 }
 .logo{
-    margin-left: 25%;
-/*     margin-right: 37%; */
     margin-top: 20px;
     color: #2A253B;
     font-size: 55px;
@@ -40,11 +35,6 @@ body{
 }
 
 .write{
-    white-space: nowrap;
-/*     overflow: hidden; */
-    text-overflow: ellipsis;
-    margin-left: 37%;
-/*     margin-right: 37%; */
     text-align: center;
     color: #FFFFFF;
     font-size: 20px;
@@ -62,27 +52,24 @@ body{
     justify-content: center;
     box-shadow: 2px 2px #000000;
     margin-top: 20px;
-    /* margin-bottom: 320px; */
-    margin-left: 37%;
-    /* margin-right: 50%; */
-    /* left: 50%;
-    right: 50%; */
-    /* margin-right: center; */
+    margin-bottom: 320px;
+    margin-left: 1100px;
+    margin-right: 100;
+    cursor: pointer;
     /* margin-left: 570px; */
 }
 .nav-btn a{
     color: #000000;
     text-decoration: none;
     display: inline-block;
-    font-size: 34px;
+    font-size: 24px;
 }
 
 .col-container {
     display: table; /* Make the container element behave like a table */
-    width: 450px; /* Set full-width to expand the whole page */
-    height: 770px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 1000px; /* Set full-width to expand the whole page */
+    height: 500px;
+    margin-left: 150px;
     margin-top: 10px;
     background-color: #FFFFFF;
     border-radius: 15px;
@@ -204,7 +191,7 @@ body{
 }
 
 label{
-    width: 220px;
+    width: 160px;
     display: inline-block;
 }
 
@@ -225,3 +212,17 @@ input[type="submit"] {
     border: none;
     cursor: pointer;
    }
+
+   .loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
